# roobot

./: Cargo.toml
src/: cli.rs  data.rs  lib.rs  main.rs  util.rs
src/icon_updater/: img.rs  message.rs  mod.rs  state.rs
