[package]
name = "roobot"
version = "0.1.0"
edition = "2021"

[lib]
name = "roobot"
path = "src/lib.rs"

[[bin]]
name = "roobot-bin"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.3"
cron = "0.12.1"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serenity = "0.12.2"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
